--- a/OpenGL/OpenGL/imgui.ini
+++ b/OpenGL/OpenGL/imgui.ini
@@ -1,8 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=227,66
+Size=400,99
 
 [Window][Hello, world!]
-Pos=196,256
+Pos=211,159
 Size=339,180
+
+[Window][Test]
+Pos=60,60
+Size=411,170
 
