add texture test

--- a/OpenGL/OpenGL/imgui.ini
+++ b/OpenGL/OpenGL/imgui.ini
@@ -3,10 +3,10 @@ Pos=227,66
 Size=400,99
 
 [Window][Hello, world!]
-Pos=211,159
+Pos=289,339
 Size=339,180
 
 [Window][Test]
-Pos=60,60
+Pos=82,-17
 Size=411,170
 
