--- a/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\tests\TestTexture2D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\TestBatchColor.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -1389,6 +1392,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\TestTexture2D.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\TestBatchColor.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
