--- a/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\tests\TestBatchTexture2D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\TestBatchDynamics.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -1401,6 +1404,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\TestBatchTexture2D.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\TestBatchDynamics.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
